# varmacalc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  finiteelementmodel.cpp  finiteelementmodel.h  main.cpp  mainwindow.cpp  mainwindow.h
